--- a/ar.lproj/Localizable.strings
+++ b/ar.lproj/Localizable.strings
@@ -11,3 +11,4 @@
 "valid_name" = "رجاء ادخل اسما صحيحا";
 "valid_email" = "يرجى إدخال البريد الإلكتروني الصحيح";
 "valid_password" = "الرجاء إدخال كلمة السر الصحيحة";
+"valid_roon_length" = "يتطلب حقلا";
