--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -11,3 +11,4 @@
 "valid_first_name" = "Please enter a valid name.";
 "valid_email" = "Please enter a valid email.";
 "valid_password" = "Please enter a password";
+"valid_roon_length" = "Required Field";
