Following changes have been made in this commit. UI: Screen for free amenities has been completed.
Task Completed: Made dynamic view for description with counter.

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -12,3 +12,4 @@
 "valid_email" = "Please enter a valid email.";
 "valid_password" = "Please enter a password";
 "valid_roon_length" = "Required Field";
+"valid_description" = "Required";
