Currently working on free amenities screen functionality.

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -13,3 +13,4 @@
 "valid_password" = "Please enter a password";
 "valid_roon_length" = "Required Field";
 "valid_description" = "Required";
+"loading" = "Working";
