--- a/ar.lproj/Localizable.strings
+++ b/ar.lproj/Localizable.strings
@@ -12,3 +12,4 @@
 "valid_email" = "يرجى إدخال البريد الإلكتروني الصحيح";
 "valid_password" = "الرجاء إدخال كلمة السر الصحيحة";
 "valid_roon_length" = "يتطلب حقلا";
+"loading" = "عمل";
