UI: Added cancelation dialog in Facility detail screen.

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -14,3 +14,4 @@
 "valid_roon_length" = "Required Field";
 "valid_description" = "Required";
 "loading" = "Working";
+"cancel_booking_title" = "Are you sure you want to cancel the booking?";
