--- a/ar.lproj/Localizable.strings
+++ b/ar.lproj/Localizable.strings
@@ -13,3 +13,4 @@
 "valid_password" = "الرجاء إدخال كلمة السر الصحيحة";
 "valid_roon_length" = "يتطلب حقلا";
 "loading" = "عمل";
+"cancel_booking_title" = "هل أنت متأكد أنك تريد إلغاء الحجز؟";
