UI: added network images to facility details screen.

--- a/ar.lproj/Localizable.strings
+++ b/ar.lproj/Localizable.strings
@@ -21,3 +21,16 @@
 "Check in" = "تحقق في";
 "Check out" = "الدفع";
 "Calendar" = "تقويم";
+"View" = "رأي";
+"Guest" = "زائر";
+"Complain" = "شكوى";
+"Amenities" = "وسائل الراحة";
+"Location" = "موقعك";
+"Reviews" = "المراجعات";
+"Capacity" = "الاهلية";
+"Living rooms" = "غرف المعيشة";
+"Living space" = "مكان عيش \ سكن";
+"Message Guest" = "رسالة الضيف";
+"Arrival after" = "وصول بعد";
+
+
