--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -22,7 +22,17 @@
 "Check in" = "Check in";
 "Check out" = "Check out";
 "Calendar" = "Calender";
-
+"View" = "View";
+"Guest" = "Guest";
+"Complain" = "Complain";
+"Amenities" = "Amenities";
+"Location" = "Location";
+"Reviews" = "Reviews";
+"Capacity" = "Capacity";
+"Living rooms" = "Living rooms";
+"Living space" = "Living space";
+"Message Guest" = "Message Guest";
+"Arrival after" = "Arrival after";
 
 
 
