UI: Added screens for upcoming and present guests.

--- a/ar.lproj/Localizable.strings
+++ b/ar.lproj/Localizable.strings
@@ -38,3 +38,8 @@
 
 "%@ currency" = "%@ س.ر";
 "Continue" = "يكمل";
+//My Guests Screen
+"My Guests" = "ضيوفي";
+"Upcoming" = "القادمة";
+"Present" = "الحالي";
+"Rating" = "المراجعات";
