--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -40,6 +40,11 @@
 "%@ currency" = "%@ SAR";
 
 "Continue" = "Continue";
+//My Guests Screen
+"My Guests" = "My Guests";
+"Upcoming" = "Upcoming";
+"Present" = "Present";
+"Rating" = "Rating";
 
 
 
