UI: Added a view for calendar and created screens for adding an offer.

--- a/ar.lproj/Localizable.strings
+++ b/ar.lproj/Localizable.strings
@@ -45,3 +45,17 @@
 "Rating" = "المراجعات";
 "Rate" = "معدل";
 "View details" = "عرض التفاصيل";
+
+//Offers Screen
+"Set duration" = "ضبط المدة";
+"to" = "إلى";
+
+//Calendar
+
+"mon" = "الاثنين";
+"tue" = "الثلاثاء";
+"wed" = "الأربعاء";
+"thu" = "الخميس";
+"fri" = "الجمعة";
+"sat" = "السبت";
+"sun" = "الأحد";
