UI: Added create promo codes screen for owner. Still need to implement networking.

--- a/ar.lproj/Localizable.strings
+++ b/ar.lproj/Localizable.strings
@@ -89,6 +89,13 @@
 "empty offer price" = "الرجاء إدخال المبلغ";
 "invalid discount price" = "الرجاء إدخال المبلغ أقل من السعر الأصلي للمنشأة";
 
+//Create promocodes
+"New promocode" = "كود ترويجي جديد";
+"Existing codes" = "الرموز الموجودة";
+"maximum_people" = "الحد الأقصى لعدد الأشخاص الذين يمكنهم استخدام الرمز الترويجي.";
+"Promo code rule" = "سيتم خصم قيمة أكواد الترويج الشخصي من السعر الإجمالي ، ثم سيتم خصم خصم الشركة بعد الخصم.";
+"empty_promo_message" = "مرحبًا ، ليس لديك أي رموز ترويجية حتى الآن. يمكنك إضافة واحدة لجذب المزيد من الضيوف.";
+"create promo" = "أنشئ رمزًا ترويجيًا";
 //Calendar
 
 "mon" = "الاثنين";
@@ -107,3 +114,7 @@
 //m2
 "%@ m2" = "%@ متر مربع";
 
+// ErrorState Message
+"oops" = "وجه الفتاة !";
+"something_went_wrong" = "حدث خطأ ما. أعد المحاولة من فضلك";
+"retry" = "أعد المحاولة";
