UI: Fixed a bug in HomeScreen.

--- a/ar.lproj/Localizable.strings
+++ b/ar.lproj/Localizable.strings
@@ -40,6 +40,11 @@
 "Deposit is %lld SAR" = "الإيداع هو %lld ر.س";
 
 
+//Owner Calendar Screen
+
+"Facilities" = "Facilities";
+
+
 // Facility details Screen
 "per night" = "لليلة الواحدة";
 "booked" = "حجز";
